--- a/css/services.css
+++ b/css/services.css
@@ -4,11 +4,10 @@
     --bs-gray-200: #e9ecef;
 }
 
-body{
-     font-family: 'Roboto', sans-serif;;
-}
+
 .services{
     background-color: #f5f5f5;
+    font-family: 'Roboto', sans-serif;
 }
 
 .service-box i{
